NetflixClone/deploymenthpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflixclone
  labels:
      app: netflixclone
spec:
    replicas: 2     #desiredstate
    strategy: 
          type: RollingUpdate
    selector: 
          matchLabels:
            app: netflixclone
    template: 
        metadata: 
            labels: 
              app: netflixclone   
        spec: 
          containers:
             - name: netflixclone
               image: swapnil0078/netflix:clone
               ports:
                  - containerPort: 80
                    protocol: TCP
               resources:
                  requests:
                        memory: "64Mi"
                        cpu: "125m"
                  limits:     
                        memory: "128Mi"
                        cpu: "250m"
