NetflixClone/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflixclone

spec:
  type: ClusterIP
  selector:
    app:  netflixclone
  ports:
  - port: 80
    name: netflixclone
    protocol: TCP
