NetflixClone/ingressrule.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a47eb078e26fd453ba1a7f6a9e947d7d-1283335707.ap-northeast-3.elb.amazonaws.com
    http:
      paths:
        
         -  path: /
            pathType: Prefix
            backend:
              service: 
                name: netflix
                port:
                  number: 80
